--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -305,6 +305,8 @@
     <Content Include="app\Services\TithingDataService.service.spec.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="Content\ui-bootstrap-csp.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -1120,6 +1122,8 @@
     <Content Include="Models\ChurchResourceDbModel.edmx.diagram">
       <DependentUpon>ChurchResourceDbModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\Jasmine\jasmine-jquery.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -1146,6 +1150,8 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <None Include="Views\Test\SpecRunner.cshtml" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
