--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -1152,6 +1152,8 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Views\Offerings\Home.cshtml" />
+    <Content Include="Views\Offerings\AddOfferings.cshtml" />
+    <Content Include="Views\Offerings\_addOffering.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
@@ -1204,6 +1206,7 @@
     <Content Include="Views\Treasury\Home.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="app\Controllers\Offerings\" />
     <Folder Include="app\Directives\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
