--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -202,7 +202,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ACTIVITIES.cs">
+    <Compile Include="Models\ACTIVITy.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ACTIVITY_TYPES.cs">
@@ -230,14 +230,11 @@
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DatabaseContext.cs" />
-    <Compile Include="Models\DONATION_TYPES.cs">
-      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\FAMILIES.cs">
+    <Compile Include="Models\FAMILy.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\LOCATIONS.cs">
+    <Compile Include="Models\LOCATION.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
@@ -255,21 +252,10 @@
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ModelFactory.cs" />
+    <Compile Include="Models\OfferingsViewModel.cs" />
     <Compile Include="Models\Repository.cs" />
-    <Compile Include="Models\TITHES.cs">
-      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\TithesViewModel.cs" />
-    <Compile Include="Models\TRANSACTIONS.cs">
-      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\TRANSACTION_TYPES.cs">
-      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\Utilities.cs" />
-    <Compile Include="Models\UTILITY_BILLS.cs">
-      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -294,6 +280,8 @@
     <Content Include="app\Controllers\Tithing\TithesRunningTotals.controller.js" />
     <Content Include="app\Controllers\Tithing\TithingActivityByMemberGrid.controller.js" />
     <Content Include="app\Filters\Search.filter.js" />
+    <Content Include="app\Services\OfferingDataService.service.js" />
+    <Content Include="app\Services\OfferingDataService.service.spec.js" />
     <Content Include="app\Services\TitheVars.service.js" />
     <Content Include="app\Controllers\Tithing\Tithing.controller.js" />
     <Content Include="app\Controllers\Tithing\Tithing.controller.spec.js" />
@@ -1120,6 +1108,8 @@
     <Content Include="Scripts\i18n\angular-locale_zh.js" />
     <Content Include="Scripts\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\i18n\angular-locale_zu.js" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <EntityDeploy Include="Models\ChurchResourceDbModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ChurchResourceDbModel.Designer.cs</LastGenOutput>
@@ -1127,8 +1117,6 @@
     <Content Include="Models\ChurchResourceDbModel.edmx.diagram">
       <DependentUpon>ChurchResourceDbModel.edmx</DependentUpon>
     </Content>
-    <Content Include="Content\toastr.scss" />
-    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\Jasmine\jasmine-jquery.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
