--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -202,7 +202,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\ACTIVITy.cs">
+    <Compile Include="Models\ACTIVITIES.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ACTIVITY_TYPES.cs">
@@ -230,11 +230,14 @@
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DatabaseContext.cs" />
-    <Compile Include="Models\FAMILy.cs">
+    <Compile Include="Models\DONATION_TYPES.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FAMILIES.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\LOCATION.cs">
+    <Compile Include="Models\LOCATIONS.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
@@ -252,10 +255,25 @@
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ModelFactory.cs" />
+    <Compile Include="Models\OFFERINGS.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\OfferingsViewModel.cs" />
     <Compile Include="Models\Repository.cs" />
+    <Compile Include="Models\TITHES.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TithesViewModel.cs" />
+    <Compile Include="Models\TRANSACTIONS.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TRANSACTION_TYPES.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Utilities.cs" />
+    <Compile Include="Models\UTILITY_BILLS.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
