--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -279,16 +279,24 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\Components\addOffering.component.js" />
+    <Content Include="app\Components\addOffering.component.spec.js" />
     <Content Include="app\Components\addTithe.component.js" />
     <Content Include="app\Components\deleteTithe.component.js" />
     <Content Include="app\Components\editTitheModal.component.js" />
+    <Content Include="app\Components\offeringActivity.component.js" />
+    <Content Include="app\Components\offeringActivity.component.spec.js" />
     <Content Include="app\Components\Shared\runningTotal.component.js" />
     <Content Include="app\Components\tithesRunningTotal.component.js" />
     <Content Include="app\Components\tithingActivity.component.js" />
     <Content Include="app\Components\tithingActivityByMemberGrid.component.js" />
     <Content Include="app\Controllers\Home\Home.controller.js" />
     <Content Include="app\Controllers\Home\Home.controller.spec.js" />
-    <Content Include="app\Controllers\Shared\runningTotalsController.js" />
+    <Content Include="app\Components\Shared\runningTotals.component.spec.js" />
+    <Content Include="app\Controllers\Offerings\AddOffering.controller.js" />
+    <Content Include="app\Controllers\Offerings\Offering.controller.js" />
+    <Content Include="app\Controllers\Offerings\OfferingActivity.controller.js" />
+    <Content Include="app\Controllers\Shared\runningTotals.controller.js" />
     <Content Include="app\Controllers\Tithing\AddTithes.controller.js" />
     <Content Include="app\Controllers\Tithing\AddTithes.controller.spec.js" />
     <None Include="app\Controllers\Tithing\EditTithe.controller.js.old" />
@@ -1164,6 +1172,7 @@
     <Content Include="Views\Offerings\AddOfferings.cshtml" />
     <Content Include="Views\Offerings\_addOffering.cshtml" />
     <Content Include="Views\Shared\_runningTotals.cshtml" />
+    <Content Include="Views\Offerings\_offeringActivity.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
@@ -1216,7 +1225,6 @@
     <Content Include="Views\Treasury\Home.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\Controllers\Offerings\" />
     <Folder Include="app\Directives\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
