--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -265,6 +265,9 @@
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\OfferingsViewModel.cs" />
+    <Compile Include="Models\RELATIONSHIP_TYPES.cs">
+      <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Models\TITHES.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
