--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Models\FAMILIES.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\FamiliesViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\LOCATIONS.cs">
       <DependentUpon>ChurchResourceDbModel.tt</DependentUpon>
@@ -297,11 +298,13 @@
     <Content Include="app\Components\addMembership.component.js" />
     <Content Include="app\Components\addOffering.component.js" />
     <Content Include="app\Components\addOffering.component.spec.js" />
+    <Content Include="app\Components\address.component.js" />
     <Content Include="app\Components\addTithe.component.js" />
     <Content Include="app\Components\deleteOffering.component.js" />
     <Content Include="app\Components\deleteTithe.component.js" />
     <Content Include="app\Components\editOfferingModal.component.js" />
     <Content Include="app\Components\editTitheModal.component.js" />
+    <Content Include="app\Components\family.component.js" />
     <Content Include="app\Components\memberInformation.component.js" />
     <Content Include="app\Components\offeringActivity.component.js" />
     <Content Include="app\Components\offeringActivity.component.spec.js" />
@@ -313,6 +316,8 @@
     <Content Include="app\Controllers\Home\Home.controller.spec.js" />
     <Content Include="app\Components\Shared\runningTotal.component.spec.js" />
     <Content Include="app\Controllers\Membership\AddMembership.controller.js" />
+    <Content Include="app\Controllers\Membership\Address.controller.js" />
+    <Content Include="app\Controllers\Membership\Family.controller.js" />
     <Content Include="app\Controllers\Membership\MemberInformation.controller.js" />
     <Content Include="app\Controllers\Membership\Membership.controller.js" />
     <Content Include="app\Controllers\Offerings\AddOffering.controller.js" />
@@ -1207,8 +1212,11 @@
     <Content Include="Views\Offerings\OfferingsSearch.cshtml" />
     <Content Include="Views\Membership\Home.cshtml" />
     <Content Include="Views\Membership\AddMembership.cshtml" />
-    <Content Include="Views\Membership\_addMembership.cshtml" />
+    <Content Include="Views\Membership\_membership.cshtml" />
+    <None Include="Views\Membership\_addMembership.cshtml.old" />
     <Content Include="Views\Membership\_memberInformation.cshtml" />
+    <Content Include="Views\Membership\_family.cshtml" />
+    <Content Include="Views\Membership\_address.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
