Added readonly fields

--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -300,14 +300,18 @@
     <Content Include="app\Components\addOffering.component.js" />
     <Content Include="app\Components\addOffering.component.spec.js" />
     <Content Include="app\Components\address.component.js" />
+    <Content Include="app\Components\addressReadOnly.component.js" />
     <Content Include="app\Components\addTithe.component.js" />
     <Content Include="app\Components\contactInformation.component.js" />
+    <Content Include="app\Components\contactInformationReadOnly.component.js" />
     <Content Include="app\Components\deleteOffering.component.js" />
     <Content Include="app\Components\deleteTithe.component.js" />
     <Content Include="app\Components\editOfferingModal.component.js" />
     <Content Include="app\Components\editTitheModal.component.js" />
     <Content Include="app\Components\family.component.js" />
+    <Content Include="app\Components\familyReadOnly.component.js" />
     <Content Include="app\Components\memberInformation.component.js" />
+    <Content Include="app\Components\memberInformationReadOnly.component.js" />
     <Content Include="app\Components\offeringActivity.component.js" />
     <Content Include="app\Components\offeringActivity.component.spec.js" />
     <Content Include="app\Components\Shared\runningTotal.component.js" />
@@ -1216,11 +1220,14 @@
     <Content Include="Views\Membership\Home.cshtml" />
     <Content Include="Views\Membership\AddMembership.cshtml" />
     <Content Include="Views\Membership\_membership.cshtml" />
-    <None Include="Views\Membership\_addMembership.cshtml.old" />
     <Content Include="Views\Membership\_memberInformation.cshtml" />
     <Content Include="Views\Membership\_family.cshtml" />
     <Content Include="Views\Membership\_address.cshtml" />
     <Content Include="Views\Membership\_contactInformation.cshtml" />
+    <Content Include="Views\Membership\_familyReadOnly.cshtml" />
+    <Content Include="Views\Membership\_addressReadOnly.cshtml" />
+    <Content Include="Views\Membership\_contactInformationReadOnly.cshtml" />
+    <Content Include="Views\Membership\_memberInformationReadOnly.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
