--- a/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
+++ b/ChurchResourceManagerWeb/ChurchResourceManagerWeb.csproj
@@ -311,6 +311,7 @@
     <Content Include="app\Components\editTitheModal.component.js" />
     <Content Include="app\Components\family.component.js" />
     <Content Include="app\Components\familyReadOnly.component.js" />
+    <Content Include="app\Components\manageMembership.component.js" />
     <Content Include="app\Components\memberInformation.component.js" />
     <Content Include="app\Components\memberInformationReadOnly.component.js" />
     <Content Include="app\Components\membersGrid.component.js" />
@@ -327,6 +328,7 @@
     <Content Include="app\Controllers\Membership\Address.controller.js" />
     <Content Include="app\Controllers\Membership\ContactInformation.controller.js" />
     <Content Include="app\Controllers\Membership\Family.controller.js" />
+    <Content Include="app\Controllers\Membership\ManageMembership.controller.js" />
     <Content Include="app\Controllers\Membership\MemberInformation.controller.js" />
     <Content Include="app\Controllers\Membership\MembersGrid.controller.js" />
     <Content Include="app\Controllers\Membership\Membership.controller.js" />
@@ -1233,6 +1235,8 @@
     <Content Include="Views\Membership\_memberInformationReadOnly.cshtml" />
     <Content Include="Views\Membership\_membersGrid.cshtml" />
     <Content Include="Views\Membership\MembersSearch.cshtml" />
+    <Content Include="Views\Membership\EditMembership.cshtml" />
+    <Content Include="Views\Membership\_manageMembership.cshtml" />
     <None Include="Views\Test\SpecRunner.cshtml" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
