--- a/ChurchResourceManagerWeb/packages.config
+++ b/ChurchResourceManagerWeb/packages.config
@@ -5,6 +5,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Font.Awesome" version="5.2.0" targetFramework="net461" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="MG.Packages.Angular.UI.Mask" version="1.8.7" targetFramework="net461" />
